contour/manifests/echoserver-grpc-mirror.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: ghcr.io/tsaarni/echoserver:latest
        ports:
        - name: http-api
          containerPort: 8080
        - name: https-api
          containerPort: 8443
        volumeMounts:
        - name: echoserver-cert
          mountPath: /certs
          readOnly: true
        - name: sslkeylogfile
          mountPath: /tmp
      volumes:
      - name: echoserver-cert
        secret:
          secretName: echoserver-cert
          optional: true
      - name: sslkeylogfile
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  - name: https
    port: 443
    targetPort: https-api
  selector:
    app: echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-mirror
spec:
  selector:
    matchLabels:
      app: echoserver-mirror
  template:
    metadata:
      labels:
        app: echoserver-mirror
    spec:
      containers:
      - name: echoserver
        image: ghcr.io/tsaarni/echoserver:latest
        ports:
        - name: http-api
          containerPort: 8080
        - name: https-api
          containerPort: 8443
        volumeMounts:
        - name: echoserver-cert
          mountPath: /certs
          readOnly: true
        - name: sslkeylogfile
          mountPath: /tmp
      volumes:
      - name: echoserver-cert
        secret:
          secretName: echoserver-cert
          optional: true
      - name: sslkeylogfile
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: my-external-echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  - name: https
    port: 443
    targetPort: https-api
  selector:
    app: echoserver-mirror

---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-mirror
spec:
  type: ExternalName
  externalName: my-external-echoserver.default.svc.cluster.local
  ports:
  - name: http
    port: 80
    targetPort: http-api
  - name: https
    port: 443
    targetPort: https-api
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver
spec:
  virtualhost:
    fqdn: echoserver.127-0-0-101.nip.io
    tls:
      secretName: ingress
  routes:
    - services:
        - name: echoserver
          port: 443
          protocol: tls
#          protocol: h2c

        - name: echoserver-mirror
          port: 443
#          protocol: h2c
          protocol: tls
          mirror: true
          requestHeadersPolicy:
            set:
              - name: Host
                value: external-service3.example.com
